# ai-btc

./: README.md  pyproject.toml
back/: .gitignore  DockerFile  README.md  main.py  pyproject.toml
back/src/: main.py  model.py
data/: binance_1d.csv
docs/: ci-cd-setup.md
front/: .gitignore  Dockerfile  README.md  env.py  main.py  pyproject.toml
front/src/: api.py  data.py  env.py  layout.py  main.py  ui.py  utils.py
front/src/components/: graph.py  input.py  output.py  table.py  timeframe_selector.py
front/src/components/store/: callback.py  component.py
front/src/store/: point.py  store.py
front/src/validation/: date.py
