[project]
name = "ai-btc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.121.0",
    "nbformat>=5.10.4",
    "pandas>=2.3.3",
    "plotly>=6.4.0",
    "ruff>=0.14.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
]
